--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-icons": "^5.5.0",
-    "swiper": "^11.2.10"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
